# HYU-SPA_v2

./: README.md
HYUSPA/hyuspa_control/: CMakeLists.txt  package.xml
HYUSPA/hyuspa_description/: CMakeLists.txt  package.xml
HYUSPA/hyuspa_gazebo/: CMakeLists.txt  package.xml
HYUSPA/hyuspa_launch/: CMakeLists.txt  package.xml
HYUSPA_v2/hyuspa_v2_control/: CMakeLists.txt  package.xml
HYUSPA_v2/hyuspa_v2_description/: CMakeLists.txt  package.xml
HYUSPA_v2/hyuspa_v2_gazebo/: CMakeLists.txt  package.xml
HYUSPA_v2/hyuspa_v2_launch/: CMakeLists.txt  package.xml
dualarm_controller/: CMakeLists.txt
dualarm_controller/include/: Controller.cpp  LieOperator.h  PoEKinematics.h  PropertyDefinition.h  SerialRobot.cpp
dualarm_controller/src/: computedtorque_control_clik.cpp
hyuspa_controller/: CMakeLists.txt  controller_plugins.xml  package.xml
hyuspa_controller/include/: Controller.cpp  Controller.h  LieDynamics.cpp  LieDynamics.h  LieOperator.cpp  PoEKinematics.cpp  PoEKinematics.h  PropertyDefinition.h  SerialRobot.cpp  SerialRobot.h  Trajectory.cpp  Trajectory.h
hyuspa_controller/src/: computedtorque_control_clik.cpp
hyuspa_v2_controller/: CMakeLists.txt  controller_plugins.xml  package.xml
hyuspa_v2_controller/include/: Controller.cpp  Controller.h  LieOperator.cpp  LieOperator.h  PoEKinematics.cpp  PoEKinematics.h  PropertyDefinition.h  SerialRobot.cpp  SerialRobot.h  Trajectory.cpp  Trajectory.h
hyuspa_v2_controller/include/Untitled Folder/: Controller.cpp
hyuspa_v2_controller/src/: computedtorque_control_clik.cpp
(+21 files in other folders)
